--- a/document rule/pom.xml
+++ b/document rule/pom.xml
@@ -4,7 +4,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.aviva</groupId>
   <artifactId>documentroute</artifactId>
-  <version>1.0-</version>
+  <version>1.0.0-SNAPSHOT</version>
   <packaging>kjar</packaging>
   <name>document rule</name>
   <repositories>
