{/document rule/src/main/resources/com/aviva/documentroute/test.template}

--- a/document rule/src/main/resources/com/aviva/documentroute/test.template
+++ b/document rule/src/main/resources/com/aviva/documentroute/test.template
@@ -103,7 +103,11 @@
       </window>
     </fact>
   </lhs>
-  <rhs/>
+  <rhs>
+    <freeForm>
+      <text>System.out.println(&quot;hello&quot;);</text>
+    </freeForm>
+  </rhs>
   <imports>
     <imports/>
   </imports>
