--- a/document rule/src/main/resources/com/aviva/documentroute/test.template
+++ b/document rule/src/main/resources/com/aviva/documentroute/test.template
@@ -20,6 +20,10 @@
             <fieldName>name</fieldName>
             <fieldType>String</fieldType>
           </fieldConstraint>
+          <compositeConstraint>
+            <compositeJunctionType>&amp;&amp;</compositeJunctionType>
+            <constraints/>
+          </compositeConstraint>
         </constraints>
       </constraintList>
       <factType>DocTrxGroup</factType>
@@ -57,6 +61,10 @@
             <fieldName>value</fieldName>
             <fieldType>String</fieldType>
           </fieldConstraint>
+          <compositeConstraint>
+            <compositeJunctionType>||</compositeJunctionType>
+            <constraints/>
+          </compositeConstraint>
         </constraints>
       </constraintList>
       <factType>CheckList</factType>
@@ -94,6 +102,9 @@
             <fieldName>value</fieldName>
             <fieldType>String</fieldType>
           </fieldConstraint>
+          <compositeConstraint>
+            <compositeJunctionType>||</compositeJunctionType>
+          </compositeConstraint>
         </constraints>
       </constraintList>
       <factType>CheckList</factType>
