{/document rule/src/main/resources/com/aviva/documentroute/test.template}

--- a/document rule/src/main/resources/com/aviva/documentroute/test.template
+++ b/document rule/src/main/resources/com/aviva/documentroute/test.template
@@ -113,6 +113,83 @@
         <parameters/>
       </window>
     </fact>
+    <fact>
+      <constraintList>
+        <constraints>
+          <fieldConstraint>
+            <value>POLICY_STATUS</value>
+            <operator>==</operator>
+            <constraintValueType>4</constraintValueType>
+            <expression>
+              <parts/>
+              <index>2147483647</index>
+            </expression>
+            <parameters/>
+            <factType>CheckList</factType>
+            <fieldName>name</fieldName>
+            <fieldType>String</fieldType>
+          </fieldConstraint>
+          <fieldConstraint>
+            <value>IF</value>
+            <operator>==</operator>
+            <constraintValueType>1</constraintValueType>
+            <expression>
+              <parts/>
+              <index>2147483647</index>
+            </expression>
+            <parameters/>
+            <factType>CheckList</factType>
+            <fieldName>value</fieldName>
+            <fieldType>String</fieldType>
+          </fieldConstraint>
+          <compositeConstraint>
+            <compositeJunctionType>&amp;&amp;</compositeJunctionType>
+          </compositeConstraint>
+        </constraints>
+      </constraintList>
+      <factType>CheckList</factType>
+      <isNegated>false</isNegated>
+      <window>
+        <parameters/>
+      </window>
+    </fact>
+    <fact>
+      <constraintList>
+        <constraints>
+          <fieldConstraint>
+            <value>POLICY_STATUS</value>
+            <operator>==</operator>
+            <constraintValueType>4</constraintValueType>
+            <expression>
+              <parts/>
+              <index>2147483647</index>
+            </expression>
+            <parameters/>
+            <factType>CheckList</factType>
+            <fieldName>name</fieldName>
+            <fieldType>String</fieldType>
+          </fieldConstraint>
+          <fieldConstraint>
+            <value>ON_HOLD</value>
+            <operator>==</operator>
+            <constraintValueType>1</constraintValueType>
+            <expression>
+              <parts/>
+              <index>2147483647</index>
+            </expression>
+            <parameters/>
+            <factType>CheckList</factType>
+            <fieldName>value</fieldName>
+            <fieldType>String</fieldType>
+          </fieldConstraint>
+        </constraints>
+      </constraintList>
+      <factType>CheckList</factType>
+      <isNegated>false</isNegated>
+      <window>
+        <parameters/>
+      </window>
+    </fact>
   </lhs>
   <rhs>
     <freeForm>
